noinst_LIBRARIES=libconcentrator.a

libconcentrator_a_SOURCES=aggregator.c aggregator.h crc16.c crc16.h hashing.c hashing.h ipfix.c ipfix.h \
ipfixReceiver.c ipfixReceiver.h printIpfix.c printIpfix.h rcvIpfix.c rcvIpfix.h rules.c rules.h \
sampler_hook_entry.c sampler_hook_entry.h sndIpfix.c sndIpfix.h templateBuffer.c templateBuffer.h

AM_CFLAGS=-I$(top_srcdir) -Wall
