noinst_LIBRARIES=libreconf.a

libreconf_a_SOURCES=\
	Destination.h Destination.cpp \
	Emitable.h Emitable.cpp \
	FilterModule.h FilterModule.cpp \
	Module.h \
	PacketConnectionQueue.h PacketConnectionQueue.cpp \
	PacketConnectionSplicer.h PacketConnectionSplicer.cpp \
	PacketDestination.h  PacketDestination.cpp  \
	PacketSource.h PacketSource.cpp  \
	Source.h

AM_CXXFLAGS=-I$(top_srcdir) -Wall -Werror
