noinst_LIBRARIES=libreconf.a

libreconf_a_SOURCES=\
	Destination.h Destination.cpp \
	Emitable.h Emitable.cpp \
	FilterModule.h FilterModule.cpp \
	Module.h \
	ConnectionQueue.h \
	ConnectionSplicer.h
	Source.h

#	PacketConnectionSplicer.cpp \
#	PacketConnectionQueue.h PacketConnectionQueue.cpp \
#	PacketDestination.h  PacketDestination.cpp \ 
#	PacketSource.h PacketSource.cpp 
#

AM_CXXFLAGS=-I$(top_srcdir) -Wall -Werror
