noinst_LIBRARIES=libsampler.a

libsampler_a_SOURCES=ConcurrentQueue.h ExporterSink.cpp ExporterSink.h Filter.cpp Filter.h HookingFilter.cpp \
HookingFilter.h IPHeaderFilter.cpp IPHeaderFilter.h Lock.h Observer.cpp Observer.h Packet.cpp Packet.h \
PacketProcessor.h PacketReceiver.h PacketSink.cpp PacketSink.h RandomSampler.cpp \
RandomSampler.h Semaphore.h Sink.h SystematicSampler.cpp SystematicSampler.h Template.cpp \
Template.h Thread.h TimeoutSemaphore.h stringFilter.h stringFilter.cpp regExFilter.cpp regExFilter.h \
ExpressHookingFilter.cpp ExpressHookingFilter.h ../common/InstanceManager.h

AM_CXXFLAGS=-I$(top_srcdir) -Wall -Werror
